--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <dl class="kv">
             <div>
               <dt>邮箱</dt>
-              <dd><a href="mailto:you@example.com">you11@example.com</a></dd>
+              <dd><a href="mailto:you@example.com">you@example.com</a></dd>
             </div>
             <div>
               <dt>简历</dt>
