--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="zh-Hans">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="dark light" />
     <meta name="theme-color" content="#0b1020" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#f7f7fb" media="(prefers-color-scheme: light)" />
-    <title>404 | 页面不存在</title>
+    <title>404 | Page Not Found</title>
     <link rel="icon" href="assets/img/avatar.svg" />
 
     <script>
@@ -32,8 +32,8 @@
       <div class="container grid">
         <section class="card full">
           <h1>404</h1>
-          <p class="muted">这个页面不存在，可能链接写错了。</p>
-          <p><a class="btn" href="./">返回主页</a></p>
+          <p class="muted">This page does not exist. The link may be incorrect.</p>
+          <p><a class="btn" href="./">Back to Home</a></p>
         </section>
       </div>
     </main>
