--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script>
       (() => {
         const THEME_KEY = "theme";
+        const LANG_KEY = "lang";
         try {
           const saved = localStorage.getItem(THEME_KEY);
           const theme =
@@ -29,6 +30,10 @@
                 ? "light"
                 : "dark";
           if (theme === "light") document.documentElement.setAttribute("data-theme", "light");
+          
+          const lang = localStorage.getItem(LANG_KEY) || "zh";
+          document.documentElement.setAttribute("data-lang", lang);
+          document.documentElement.setAttribute("lang", lang === "zh" ? "zh-Hans" : "en");
         } catch {}
       })();
     </script>
@@ -44,7 +49,8 @@
     <script defer src="assets/js/main.js"></script>
   </head>
   <body>
-    <a class="skip-link" href="#content">跳到主要内容</a>
+    <a class="skip-link" href="#content" data-lang="zh">跳到主要内容</a>
+    <a class="skip-link" href="#content" data-lang="en">Skip to main content</a>
 
     <header class="site-header">
       <div class="container header-inner">
@@ -52,7 +58,7 @@
           <img
             class="avatar"
             src="assets/img/avatar.svg"
-            alt="头像"
+            alt="头像 / Avatar"
             width="56"
             height="56"
             decoding="async"
@@ -60,11 +66,18 @@
           />
           <div class="brand-text">
             <div class="name">Chris Tu</div>
-            <div class="tagline">你的头衔 / 专业方向 · 城市</div>
+            <div class="tagline">
+              <span data-lang="zh">你的头衔 / 专业方向 · 城市</span>
+              <span data-lang="en">Your Title / Expertise · Location</span>
+            </div>
           </div>
         </div>
 
         <div class="header-actions">
+          <button class="btn btn-ghost" id="langToggle" type="button" aria-label="切换语言 / Switch Language">
+            <span class="btn-label" data-lang="zh">中</span>
+            <span class="btn-label" data-lang="en">EN</span>
+          </button>
           <button class="btn btn-ghost" id="themeToggle" type="button" aria-label="切换主题">
             <span class="btn-icon" aria-hidden="true">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -73,7 +86,8 @@
                 />
               </svg>
             </span>
-            <span class="btn-label">主题</span>
+            <span class="btn-label" data-lang="zh">主题</span>
+            <span class="btn-label" data-lang="en">Theme</span>
           </button>
           <a class="btn" href="https://github.com/landau33" target="_blank" rel="noopener noreferrer">
             GitHub
@@ -85,16 +99,25 @@
     <main id="content" class="site-main">
       <div class="container grid">
         <section class="card hero">
-          <h1>你好，我是 <span class="accent">Chris Tu</span>。</h1>
+          <h1>
+            <span data-lang="zh">你好，我是 <span class="accent">Chris Tu</span>。</span>
+            <span data-lang="en">Hi, I'm <span class="accent">Chris Tu</span>.</span>
+          </h1>
           <p class="lead">
-            这里是一页式个人主页模板：简洁、响应式、支持暗色模式。你可以放简介、技能、
-            项目、简历、联系方式等。
+            <span data-lang="zh">这里是一页式个人主页模板：简洁、响应式、支持暗色模式。你可以放简介、技能、项目、简历、联系方式等。</span>
+            <span data-lang="en">This is a single-page personal homepage template: clean, responsive, and supports dark mode. You can include your bio, skills, projects, resume, and contact information.</span>
           </p>
           <div class="hero-actions">
-            <a class="btn" href="#projects">查看项目</a>
-            <a class="btn btn-ghost" href="#contact">联系我</a>
+            <a class="btn" href="#projects">
+              <span data-lang="zh">查看项目</span>
+              <span data-lang="en">View Projects</span>
+            </a>
+            <a class="btn btn-ghost" href="#contact">
+              <span data-lang="zh">联系我</span>
+              <span data-lang="en">Contact Me</span>
+            </a>
           </div>
-          <div class="chips" aria-label="标签">
+          <div class="chips" aria-label="标签 / Tags">
             <span class="chip">Python</span>
             <span class="chip">Data / ML</span>
             <span class="chip">Numerical Computing</span>
@@ -103,26 +126,41 @@
         </section>
 
         <section class="card" aria-labelledby="aboutTitle">
-          <h2 id="aboutTitle">关于我</h2>
+          <h2 id="aboutTitle">
+            <span data-lang="zh">关于我</span>
+            <span data-lang="en">About Me</span>
+          </h2>
           <p>
-            写一段 2-4 句的介绍：你擅长什么、在做什么、对什么感兴趣、希望合作什么。
-            可以加上你在 NTU / 实验室 / 公司做的方向等。
+            <span data-lang="zh">写一段 2-4 句的介绍：你擅长什么、在做什么、对什么感兴趣、希望合作什么。可以加上你在 NTU / 实验室 / 公司做的方向等。</span>
+            <span data-lang="en">Write a 2-4 sentence introduction: what you're good at, what you're working on, what interests you, and what you'd like to collaborate on. You can mention your work at NTU / Lab / Company, etc.</span>
           </p>
           <dl class="kv">
             <div>
-              <dt>邮箱</dt>
+              <dt>
+                <span data-lang="zh">邮箱</span>
+                <span data-lang="en">Email</span>
+              </dt>
               <dd><a href="mailto:you@example.com">you@example.com</a></dd>
             </div>
             <div>
-              <dt>简历</dt>
+              <dt>
+                <span data-lang="zh">简历</span>
+                <span data-lang="en">Resume</span>
+              </dt>
               <dd><a href="#" target="_blank" rel="noopener noreferrer">PDF / Notion / Drive</a></dd>
             </div>
             <div>
-              <dt>定位</dt>
+              <dt>
+                <span data-lang="zh">定位</span>
+                <span data-lang="en">Location</span>
+              </dt>
               <dd>Singapore / Taipei / Remote</dd>
             </div>
             <div>
-              <dt>兴趣</dt>
+              <dt>
+                <span data-lang="zh">兴趣</span>
+                <span data-lang="en">Interests</span>
+              </dt>
               <dd>Optimization · Scientific ML · Visualization</dd>
             </div>
           </dl>
@@ -130,34 +168,63 @@
 
         <section class="card full" id="projects" aria-labelledby="projectsTitle">
           <div class="section-head">
-            <h2 id="projectsTitle">项目</h2>
+            <h2 id="projectsTitle">
+              <span data-lang="zh">项目</span>
+              <span data-lang="en">Projects</span>
+            </h2>
             <p class="muted">放 3-6 个代表作即可，每个都尽量写清“做了什么”和“结果”。</p>
           </div>
 
           <div class="projects">
             <article class="project">
-              <h3>项目 A：数值拟合 / 计算实验</h3>
+              <h3>
+                <span data-lang="zh">项目 A：数值拟合 / 计算实验</span>
+                <span data-lang="en">Project A: Numerical Fitting / Computational Experiments</span>
+              </h3>
               <p class="muted">
-                一句话说明背景与目标；再用一两句说明你做了哪些关键方法（例如 GN / LM、稳定性处理等）。
+                <span data-lang="zh">一句话说明背景与目标；再用一两句说明你做了哪些关键方法（例如 GN / LM、稳定性处理等）。</span>
+                <span data-lang="en">Briefly describe the background and objectives; then explain the key methods you used (e.g., GN / LM, stability handling, etc.).</span>
               </p>
               <ul class="bullets">
-                <li>亮点 1：比如把发散的迭代做了阻尼 / 回溯，提升收敛稳定性。</li>
-                <li>亮点 2：比如加入指标（SE、相关系数）做对比评估。</li>
+                <li>
+                  <span data-lang="zh">亮点 1：比如把发散的迭代做了阻尼 / 回溯，提升收敛稳定性。</span>
+                  <span data-lang="en">Highlight 1: For example, applied damping / backtracking to divergent iterations to improve convergence stability.</span>
+                </li>
+                <li>
+                  <span data-lang="zh">亮点 2：比如加入指标（SE、相关系数）做对比评估。</span>
+                  <span data-lang="en">Highlight 2: For example, added metrics (SE, correlation coefficient) for comparative evaluation.</span>
+                </li>
               </ul>
               <div class="links">
-                <a class="pill" href="#" target="_blank" rel="noreferrer">代码</a>
-                <a class="pill" href="#" target="_blank" rel="noreferrer">报告</a>
+                <a class="pill" href="#" target="_blank" rel="noreferrer">
+                  <span data-lang="zh">代码</span>
+                  <span data-lang="en">Code</span>
+                </a>
+                <a class="pill" href="#" target="_blank" rel="noreferrer">
+                  <span data-lang="zh">报告</span>
+                  <span data-lang="en">Report</span>
+                </a>
               </div>
             </article>
 
             <article class="project">
-              <h3>项目 B：数据分析 / 可视化</h3>
+              <h3>
+                <span data-lang="zh">项目 B：数据分析 / 可视化</span>
+                <span data-lang="en">Project B: Data Analysis / Visualization</span>
+              </h3>
               <p class="muted">
-                说明你解决了什么问题、用了什么工具链（Python / Pandas / Matplotlib / etc）。
+                <span data-lang="zh">说明你解决了什么问题、用了什么工具链（Python / Pandas / Matplotlib / etc）。</span>
+                <span data-lang="en">Explain what problem you solved and what toolchain you used (Python / Pandas / Matplotlib / etc).</span>
               </p>
               <ul class="bullets">
-                <li>亮点：例如把流程自动化，减少手工处理时间。</li>
-                <li>结果：例如准确率、速度、或产出可复现报告。</li>
+                <li>
+                  <span data-lang="zh">亮点：例如把流程自动化，减少手工处理时间。</span>
+                  <span data-lang="en">Highlight: For example, automated the workflow to reduce manual processing time.</span>
+                </li>
+                <li>
+                  <span data-lang="zh">结果：例如准确率、速度、或产出可复现报告。</span>
+                  <span data-lang="en">Results: For example, accuracy, speed, or reproducible reports.</span>
+                </li>
               </ul>
               <div class="links">
                 <a class="pill" href="#" target="_blank" rel="noreferrer">Demo</a>
@@ -166,16 +233,29 @@
             </article>
 
             <article class="project">
-              <h3>项目 C：任何你想展示的东西</h3>
+              <h3>
+                <span data-lang="zh">项目 C：任何你想展示的东西</span>
+                <span data-lang="en">Project C: Anything You Want to Showcase</span>
+              </h3>
               <p class="muted">
-                如果你没有很多项目，宁可少而精；也可以放课程作业、论文复现、竞赛等。
+                <span data-lang="zh">如果你没有很多项目，宁可少而精；也可以放课程作业、论文复现、竞赛等。</span>
+                <span data-lang="en">If you don't have many projects, quality over quantity; you can also include course assignments, paper reproductions, competitions, etc.</span>
               </p>
               <ul class="bullets">
-                <li>贡献：你具体负责了什么。</li>
-                <li>技术：你用到的关键技术。</li>
+                <li>
+                  <span data-lang="zh">贡献：你具体负责了什么。</span>
+                  <span data-lang="en">Contribution: What you specifically worked on.</span>
+                </li>
+                <li>
+                  <span data-lang="zh">技术：你用到的关键技术。</span>
+                  <span data-lang="en">Technologies: Key technologies you used.</span>
+                </li>
               </ul>
               <div class="links">
-                <a class="pill" href="#" target="_blank" rel="noreferrer">链接</a>
+                <a class="pill" href="#" target="_blank" rel="noreferrer">
+                  <span data-lang="zh">链接</span>
+                  <span data-lang="en">Link</span>
+                </a>
               </div>
             </article>
           </div>
@@ -183,8 +263,14 @@
 
         <section class="card full" id="contact" aria-labelledby="contactTitle">
           <div class="section-head">
-            <h2 id="contactTitle">联系</h2>
-            <p class="muted">把常用渠道放这里（邮箱 / GitHub / LinkedIn / Scholar）。</p>
+            <h2 id="contactTitle">
+              <span data-lang="zh">联系</span>
+              <span data-lang="en">Contact</span>
+            </h2>
+            <p class="muted">
+              <span data-lang="zh">把常用渠道放这里（邮箱 / GitHub / LinkedIn / Scholar）。</span>
+              <span data-lang="en">Add your common channels here (Email / GitHub / LinkedIn / Scholar).</span>
+            </p>
           </div>
           <div class="contact">
             <a class="contact-item" href="mailto:you@example.com">
@@ -202,11 +288,17 @@
             </a>
             <a class="contact-item" href="#" target="_blank" rel="noopener noreferrer">
               <span class="contact-k">LinkedIn</span>
-              <span class="contact-v">你的链接</span>
+              <span class="contact-v">
+                <span data-lang="zh">你的链接</span>
+                <span data-lang="en">Your Link</span>
+              </span>
             </a>
             <a class="contact-item" href="#" target="_blank" rel="noopener noreferrer">
               <span class="contact-k">Google Scholar</span>
-              <span class="contact-v">你的链接</span>
+              <span class="contact-v">
+                <span data-lang="zh">你的链接</span>
+                <span data-lang="en">Your Link</span>
+              </span>
             </a>
           </div>
         </section>
@@ -217,7 +309,8 @@
       <div class="container footer-inner">
         <div class="muted">© <span id="year"></span> Chris Tu</div>
         <div class="muted">
-          Built with GitHub Pages ·
+          <span data-lang="zh">Built with GitHub Pages ·</span>
+          <span data-lang="en">Built with GitHub Pages ·</span>
           <a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">Docs</a>
         </div>
       </div>
