--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 
         <div class="header-actions">
           <button class="btn btn-ghost" id="langToggle" type="button" aria-label="切换语言 / Switch Language">
-            <span class="btn-label" data-lang="zh">中</span>
-            <span class="btn-label" data-lang="en">EN</span>
+            <span class="btn-label">中 / EN</span>
           </button>
           <button class="btn btn-ghost" id="themeToggle" type="button" aria-label="切换主题">
             <span class="btn-icon" aria-hidden="true">
@@ -140,7 +139,7 @@
                 <span data-lang="zh">邮箱</span>
                 <span data-lang="en">Email</span>
               </dt>
-              <dd><a href="mailto:you@example.com">you@example.com</a></dd>
+              <dd><a href="mailto:chris14658@naver.com">chris14658@naver.com</a></dd>
             </div>
             <div>
               <dt>
@@ -154,7 +153,7 @@
                 <span data-lang="zh">定位</span>
                 <span data-lang="en">Location</span>
               </dt>
-              <dd>Singapore / Taipei / Remote</dd>
+              <dd>Singapore / Shanghai / Remote</dd>
             </div>
             <div>
               <dt>
@@ -172,7 +171,10 @@
               <span data-lang="zh">项目</span>
               <span data-lang="en">Projects</span>
             </h2>
-            <p class="muted">放 3-6 个代表作即可，每个都尽量写清“做了什么”和“结果”。</p>
+            <p class="muted">
+              <span data-lang="zh">放 3-6 个代表作即可，每个都尽量写清"做了什么"和"结果"。</span>
+              <span data-lang="en">Include 3-6 representative works, clearly describing "what was done" and "results" for each.</span>
+            </p>
           </div>
 
           <div class="projects">
@@ -317,4 +319,3 @@
     </footer>
   </body>
 </html>
-
